# cmd/shortener-api/docs/swagger.yaml
@@ -3,11 +3,15 @@ definitions:
   handler.CreateLinkRequest:
     properties:
       expires_at:
+        example: "2027-04-08T00:00:00Z"
+        format: date-time
         type: string
       long_url:
+        example: https://example.com
         maxLength: 2048
         type: string
       short_code:
+        example: docs
         maxLength: 20
         minLength: 3
         type: string
